# olg5utr

./: .gitignore  README.md  config_example.yaml  models.py  olg5utrdesign.ipynb  optimization.py  optimus_retrain.ipynb  pyproject.toml  translator_cnn_1024ch.pth  utils.py
optimus_retraining/: data.py  plotting.py
optimus_retraining/notebooks/: olg5utrdesign.ipynb  translator_train.ipynb
src/olg5utr/: __init__.py  config.py  config_base.yaml  encoding.py  models.py  optimizer.py
tests/: test_encoding.py  test_models.py  test_optimizer.py
