[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olg5utr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy",
    "biopython",
]

[project.optional-dependencies]
training = [
    "matplotlib",
    "scipy",
    "pandas",
    "tqdm",
    "jupyter",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
